# taxator

./: Cargo.toml  LICENSE  README.md
taxator-calculator/: Cargo.toml
taxator-calculator/src/: ledger.rs  lib.rs  money.rs  tax.rs
taxator-egui/: Cargo.toml
taxator-egui/src/: lib.rs  main.rs
taxator-egui/src/ledger/: mod.rs
taxator-egui/src/monetary/: mod.rs
taxator-ui/: Cargo.toml
taxator-ui/src/: main.rs
