[package]
name = "taxator-egui"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taxator-calculator = { path = "../taxator-calculator"}
chrono = { workspace = true }
eframe = "0.25.0"
